# university

./: .gitignore  CLAUDE.md  README.md
arduino/: README.md
arduino/binary_led_4bit/: README.md  binary_led_4bit.ino
arduino/button_gestures/: button_gestures.ino
arduino/morse_led/: README.md  morse_led.ino
computer_programming/: README.md
discrete_mathematics/: README.md  Sheffer_stroke.py  continued_fraction_converter.py  gcd_lcm_calculator.py  logical_NOR.py  prime_checker.py  prime_factorization.py  sieve_of_eratosthenes.py
mathematical_analysis/: README.md  cauchy_problem.py  derivative_for_the_tabularly_defined_function.py  integral_method_of_central_rectangles.py  integral_method_of_trapeziums.py  integral_monte_carlo_method.py  integral_simpson's_method.py  lagrangian_interpolation.py  taylor_series.py
oop/: README.md
physics/: README.md  absolute_black_body.py  fermat's_principle_of_reflection.py  forced_oscillations_and_resonance.py  lissajous_figure.py  planetary_trajectory.py
software_testing/: README.md
year2/semester2/computer_programming/code/task_manager_project/: Makefile  README.md  pyproject.toml
year2/semester2/computer_programming/code/task_manager_project/task_manager/tasks/: task1_counter.py  task4_deque_operations.py  task5_queue_deque.py
year2/semester2/computer_programming/code/task_manager_project/task_manager/utils/: logger.py
year2/semester2/computer_programming/code/task_manager_project/tests/: test_task1_counter.py  test_task2_namedtuple.py  test_task3_defaultdict.py  test_task5_queue_deque.py
(+218 files in other folders)
